Enviando dados de registro para o firebase

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -53,11 +53,13 @@
                 android:textColor="@color/white" />
 
             <EditText
+                android:id="@+id/edtEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edit"
                 android:hint="email@email.com"
+                android:inputType="textEmailAddress"
                 android:padding="14dp"
                 android:textSize="14sp" />
 
@@ -69,15 +71,18 @@
                 android:textColor="@color/white" />
 
             <EditText
+                android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edit"
+                android:inputType="textPassword"
                 android:hint="******"
                 android:padding="14dp"
                 android:textSize="14sp" />
 
             <Button
+                android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -86,6 +91,16 @@
                 android:textAllCaps="false"
                 android:textColor="@color/corPrincipal"
                 app:backgroundTint="@null" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:indeterminateTint="@color/white"
+                android:visibility="gone"
+                tools:visibility="visible"/>
 
 
         </LinearLayout>
