--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,9 +22,11 @@
             android:textColor="@color/white"/>
 
         <EditText
+            android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="email@email.com"
+            android:inputType="textEmailAddress"
             android:textSize="14sp"
             android:layout_marginTop="8dp"
             android:background="@drawable/bg_edit"
@@ -38,15 +40,18 @@
             android:textColor="@color/white"/>
 
         <EditText
+            android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="******"
+            android:inputType="textPassword"
             android:textSize="14sp"
             android:layout_marginTop="8dp"
             android:background="@drawable/bg_edit"
             android:padding="14dp"/>
 
         <Button
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Login"
@@ -84,6 +89,15 @@
 
 
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:indeterminateTint="@color/white"
+            tools:visibility="visible"
+            android:visibility="gone"/>
 
 
     </LinearLayout>
