--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -31,6 +31,9 @@
             app:destination="@id/autentication"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_homeFragment_to_formTaskFragment"
+            app:destination="@id/formTaskFragment" />
     </fragment>
     <navigation android:id="@+id/autentication"
         app:startDestination="@id/loginFragment">
@@ -62,4 +65,9 @@
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true"/>
     </navigation>
+    <fragment
+        android:id="@+id/formTaskFragment"
+        android:name="br.com.kelvingcr.task.ui.FormTaskFragment"
+        android:label="fragment_form_task"
+        tools:layout="@layout/fragment_form_task" />
 </navigation>
