--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -21,9 +21,11 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/corPrincipal">
+                android:background="@color/corPrincipal"
+                app:navigationIcon="@drawable/ic_back">
 
                 <TextView
                     android:layout_width="wrap_content"
